--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,4 +62,4 @@ jobs:
         run: npx lerna publish from-git --yes
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
